# cdcs-mini

./: .gitignore  .yamllint  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tictactoe.py
.github/workflows/: ci.yml
api/: index.py
docs/: ARCHITECTURE.md  propuesta_trabajo_final.txt  typescript_examples.txt
examples/: 01_parse_port.py  04_unknown_param.py  08_contradictory.py  09_no_empty_case.py  10_token_service.py  ejemplos.txt
src/cdcs/: __init__.py  __main__.py
src/cdcs/application/: report_service.py  synthesis_service.py
src/cdcs/cli/: __init__.py  driver.py  parsers.py  ui.py
src/cdcs/domain/: models.py
src/cdcs/language/: __init__.py  base.py
src/cdcs/language/python/: __init__.py  adapter.py  expression_parser.py
src/cdcs/language/typescript/: __init__.py  _runtime.py  adapter.py  code_parser.py  expression_parser.py  source_parser.py
src/cdcs/parsing/: dsl_parser.py  source_parser.py
src/cdcs/reporting/: base.py  json_reporter.py
src/cdcs/synthesis/: artifacts.py  gates.py  llm.py  orchestrator.py  prompt.py
src/cdcs/validation/: validators.py
src/cdcs_mini/: __init__.py  __main__.py  cli.py
src/cdcs_mini/application/: report_service.py  synthesis_service.py
src/cdcs_mini/cli/: __init__.py  _version.py  driver.py  parsers.py  ui.py
src/cdcs_mini/domain/: diagnostics.py  models.py
src/cdcs_mini/language/: __init__.py  base.py
src/cdcs_mini/language/python/: __init__.py  adapter.py  expression_parser.py
src/cdcs_mini/language/typescript/: __init__.py  _runtime.py  adapter.py  code_parser.py  expression_parser.py  source_parser.py
src/cdcs_mini/parsing/: dsl_parser.py  source_parser.py
src/cdcs_mini/reporting/: base.py  json_reporter.py  schema.py
src/cdcs_mini/synthesis/: artifacts.py  gates.py  llm.py  orchestrator.py  policy.py  prompt.py
src/cdcs_mini/validation/: validators.py
tests/: conftest.py
tests/application/: test_report_service.py  test_synthesis_service.py
tests/backend/: test_backend.py
tests/cli/: test_cli.py
tests/fixtures/: malformed_dsl.py  missing_examples.py  no_generate.py  syntax_error.py  unknown_parameter.py  valid_input.py  variadic.py
tests/fixtures/ts/: malformed_dsl.ts  missing_examples.ts  no_generate.ts  syntax_error.ts  unknown_parameter.ts  valid_input.ts  variadic.ts
tests/language/: test_expression_parser_injection.py  test_python_adapter.py  test_validator_factory.py
tests/language/typescript/: conftest.py  test_expression_parser.py  test_report_via_ts_adapter.py  test_source_parser.py
tests/parsing/: test_dsl_parser.py  test_source_parser.py
tests/properties/: _strategies.py  test_dsl_parser_properties.py  test_json_reporter_properties.py  test_validators_properties.py
tests/synthesis/: test_artifacts.py  test_gates.py  test_llm.py  test_orchestrator.py  test_prompt.py
tests/validation/: test_validators.py
ts-runtime/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json  vitest.config.ts
ts-runtime/src/: expressions.ts  source.ts  types.ts
ts-runtime/tests/: cli.test.ts  expressions.test.ts  source.test.ts
web/backend/app/: dependencies.py  main.py  schemas.py  settings.py
web/backend/app/routers/: health.py  reports.py  synthesize.py
web/frontend/: package-lock.json  package.json  tailwind.config.ts
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/components/JsonViewer/: JsonViewer.tsx  index.ts
web/frontend/components/Navbar/: Navbar.tsx
web/frontend/components/ResultsCard/: ResultsCard.tsx  index.ts
web/frontend/components/SourceCard/: CodeEditor.tsx  SourceCard.tsx  index.ts  samples.ts
web/frontend/components/SyntaxHelp/: Cheatsheet.tsx  SyntaxHelp.tsx  index.ts  snippets.ts
web/frontend/components/SynthesisCard/: ReadOnlyCode.tsx  SynthesisCard.tsx  index.ts
web/frontend/components/icons/: icons.tsx
web/frontend/lib/: api.ts  hash.ts  highlightJson.tsx  theme.ts
