[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdcs-mini"
version = "0.1.0"
description = "Deterministic parser, validator, and JSON reporter for @generate behavioral contracts embedded in Python source."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tomás Rodeghiero" }]
license = { text = "MIT" }
dependencies = [
    "rich>=13.0",
    # The HTTP layer is small enough to bundle with the package; this also keeps
    # the Vercel deployment a one-step install without juggling extras
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
cdcs-mini = "cdcs_mini.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cdcs_mini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = true
show_error_codes = true
mypy_path = "src"
packages = ["cdcs_mini", "web", "tests"]
namespace_packages = true
explicit_package_bases = true
exclude = ['tests/fixtures/']

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "web", "tests"]
extend-exclude = ["tests/fixtures/syntax_error.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B018"]

[tool.vercel]
entrypoint = "api/index.py"
